--- a/client/src/app/app.component.less
+++ b/client/src/app/app.component.less
@@ -10,6 +10,10 @@
   cursor: pointer;
 }
 
+.project-card.active, .project-card:hover {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
@@ -34,4 +38,38 @@
 .mat-card-content {
   display: flex;
   flex: 1;
+}
+
+.add-project {
+  background-color: #53BA06;
+  text-align: right;
+}
+
+.mat-toolbar-multiple-rows span {
+  margin-left: 10px;
+}
+
+.add-project-icon {
+  padding: 0 14px;
+  cursor: pointer;
+  &:hover {
+    color: #53BA06;
+  }
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-button.mat-success,
+.mat-stroked-button.mat-success {
+    color: #53BA06;
+}
+
+.mat-card-header {
+  justify-content: space-between;
 }
