--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,60 +1,13 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
+    <button mat-stroked-button color="success" (click)="previousPage()">
+      <mat-icon class="example-icon" aria-hidden="false" aria-label="Example back icon">
+        arrow_back_ios
+      </mat-icon>
+    </button>
     <span>Task Management Application</span>
     <span class="toolbar-spacer"></span>
-    <mat-icon class="add-project-icon" aria-hidden="false" aria-label="Example heart icon">
-      add_circle_outline
-    </mat-icon>
+    <project-dialog-modal></project-dialog-modal>
   </mat-toolbar-row>
 </mat-toolbar>
-<div class="project">
-  <h1>Projects</h1>
-  <div fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
-    <mat-card
-      class="project-card"
-      fxFlex.sm="0 1 calc(50%-10px)"
-      fxFlex.md="0 1 calc(33%-10px)"
-      fxFlex.gt-md="0 1 calc(25%-10px)"
-      *ngFor="let project of projects"
-      [ngStyle]="{'border-color': project.complete ? '#53BA06' : '#FE5555'}"
-      [ngClass]="{'active' : project.id === selectedProject}"
-    >
-      <mat-card-header
-        (click)="setSelectedProject(project)"
-      >
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{project.name}}</mat-card-title>
-        <mat-card-subtitle>{{project.duration}}</mat-card-subtitle>
-        <mat-icon
-          class="visible-icon"
-          aria-hidden="false"
-          aria-label="Example delete icon"
-          [ngStyle]="{'color': project.id === selectedProject ? '#53BA06' : '#FE5555'}"
-        >
-          {{project.id === selectedProject ? 'visibility' : 'visibility_off'}}
-        </mat-icon>
-      </mat-card-header>
-      <mat-card-content flex>
-        <p>{{project.description}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-stroked-button color="success">
-          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">
-            add
-          </mat-icon>
-        </button>
-        <button mat-stroked-button color="primary">
-          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">
-            create
-          </mat-icon>
-        </button>
-        <button mat-stroked-button color="warn">
-          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">
-            delete
-          </mat-icon>
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</div>
-<task-list></task-list>
+<router-outlet></router-outlet>
