--- a/client/src/pages/taskList/taskList.component.html
+++ b/client/src/pages/taskList/taskList.component.html
@@ -38,6 +38,20 @@
         <td mat-cell *matCellDef="let row"> {{row.end}} </td>
       </ng-container>
 
+      <!-- Start Date Column -->
+      <ng-container matColumnDef="complete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Complete </th>
+        <td mat-cell *matCellDef="let row"> {{row.complete  ? 'Yes' : 'No'}} </td>
+      </ng-container>
+
+      <!-- Start View Column -->
+      <ng-container matColumnDef="view">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> View </th>
+        <td mat-cell *matCellDef="let row">
+          <app-view-task-icon></app-view-task-icon>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
