--- a/client/src/app/components/view-project/view-project.component.html
+++ b/client/src/app/components/view-project/view-project.component.html
@@ -49,4 +49,4 @@
     </mat-card>
   </div>
 </div>
-<task-list></task-list>
+<task-list [title]="'Task'" [projectId]="selectedProject"></task-list>
