--- a/client/src/pages/taskList/taskList.component.html
+++ b/client/src/pages/taskList/taskList.component.html
@@ -1,5 +1,5 @@
 <div class="taskList">
-  <h1>Tasks</h1>
+  <h1>{{title}}</h1>
   <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
